--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -13,6 +13,13 @@
         <%= f.label :name %>
         <%= f.text_field :name, class: 'form-control', autofocus: true, placeholder: 'Full name' %>
       </div>
+
+      <div class="form-group">
+        <%= f.label :age %>
+        <%= f.text_field :age, class: 'form-control', autofocus: true, placeholder: 'Your age' %>
+      </div>
+
+
       <div class="form-group">
         <%= f.label :email %>
         <%= f.email_field :email, class: 'form-control', placeholder: 'email@example.com' %>
