--- a/app/views/mailbox/_folder_view.html.erb
+++ b/app/views/mailbox/_folder_view.html.erb
@@ -2,7 +2,7 @@
   <div class="spacer"></div>
   <div class="col-md-12">
     <!-- we'll configure this to compose new conversations later -->
-    <%= link_to "Compose", "#", class: "btn btn-success" %>
+    <%= link_to "Compose", new_conversation_path, class: "btn btn-success" %>
     <div class="spacer"></div>
   </div>
 
@@ -18,6 +18,11 @@
     <div class="panel panel-default">
       <div class="panel-body">
         <!-- individual conversations will show here -->
+        <% if is_conversation %>
+          <%= render 'conversations/form' %>
+        <% else %>
+          <%= render partial: 'conversations/conversation', collection: messages %>
+        <% end %>
       </div>
     </div>
   </div>
