--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -13,7 +13,13 @@
       <ul class="nav navbar-nav navbar-right">
         <% if user_signed_in? %>
           <li><%= link_to(current_user.name, user_path(current_user)) %></li>
-          <li><%= link_to "Inbox", mailbox_inbox_path %></li>
+          
+          <%= link_to mailbox_inbox_path do  %>
+            <span class="label label-danger pull-right"><%=unread_messages_count%></span>
+            <em class="fa fa-inbox fa-lg"></em>
+            <span>Inbox</span>
+          <% end %>
+
           <li><%= link_to('Sign out', destroy_user_session_path, method: :delete) %></li>
         <% else %>
           <li><%= link_to 'About', about_path %></li>
