--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -30,12 +30,17 @@
           <%= f.label :location %>
           <%= f.text_field :location, placeholder: 'Location', class: 'form-control' %>
         </div>
+
+        <div class="form-group">
+          <%= f.label :steam_profile %>
+          <%= f.text_field :url, placeholder: 'Steam profile', class: 'form-control' %>
+        </div>
         <div class="form-group">
           <%= f.label :phone_number %>
           <%= f.text_field :phone_number, placeholder: 'Phone Number', class: 'form-control' %>
         </div>
         <div class="form-group">
-          <%= f.label :dob %>
+          <%= f.label :age %>
           <%= f.text_field :dob, placeholder: 'Date of Birth', class: 'form-control' %>
         </div>
         <div class="form-group">
