added ages as restricted age

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -15,8 +15,8 @@
       </div>
 
       <div class="form-group">
-        <%= f.label :age %>
-        <%= f.text_field :age, class: 'form-control', autofocus: true, placeholder: 'Your age' %>
+        <div><%= f.label :age %><br />
+        <%= f.date_select :ages, {include_blank: false, order: [:day, :month, :year] ,start_year: Date.today.year - 18, end_year: Date.today.year - 10, default: {day: 31, month: 1, year: 1997}} %></div>
       </div>
 
 
