--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -41,8 +41,9 @@
         </div>
         <div class="form-group">
           <%= f.label :age %>
-          <%= f.text_field :dob, placeholder: 'Date of Birth', class: 'form-control' %>
+          <%= f.date_select :ages, {include_blank: false, order: [:day, :month, :year] ,start_year: Date.today.year - 18, end_year: Date.today.year - 10, default: {day: 31, month: 1, year: 1997}}, placeholder: 'Date of Birth', class: 'form-control' %>
         </div>
+
         <div class="form-group">
           <%= f.label :sex %><br>
           <%= f.select :sex, options_for_seasons, class: 'form-control', prompt: 'Select One' %>
