added external link for steam profile

--- a/app/views/shared/_user_info.html.erb
+++ b/app/views/shared/_user_info.html.erb
@@ -17,7 +17,8 @@
   <% if @user.url.present? %>
       <h5>
         <%= fa_icon 'steam-square' %>
-        <%= @user.url %>
+        <%= link_to "steam profile", @user.url, :target => '_blank' %>
+
       </h5>
   <% end %>
 
